crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__deprecated_odoo_method_call_at_odoo_18.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODW8502 `check_access_rights` is deprecated since Odoo 18.0. Use `check_access` instead, or `has_access` where a boolean is needed; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:10:14
   |
 9 |     def deprecated_in_18(self):
10 |         self.check_access_rights("read")
   |              ^^^^^^^^^^^^^^^^^^^
11 |         self.check_access_rule("write")
12 |         self._filter_access_rules("read")
   |

ODW8502 [*] `check_access_rule` is deprecated since Odoo 18.0. Use `check_access` instead; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:11:14
   |
 9 |     def deprecated_in_18(self):
10 |         self.check_access_rights("read")
11 |         self.check_access_rule("write")
   |              ^^^^^^^^^^^^^^^^^
12 |         self._filter_access_rules("read")
13 |         self._filter_access_rules_python("read")
   |
help: Replace with `check_access`
   |
10 |         self.check_access_rights("read")
   -         self.check_access_rule("write")
11 +         self.check_access("write")
12 |         self._filter_access_rules("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 [*] `_filter_access_rules` is deprecated since Odoo 18.0. Use `_filtered_access` instead; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:12:14
   |
10 |         self.check_access_rights("read")
11 |         self.check_access_rule("write")
12 |         self._filter_access_rules("read")
   |              ^^^^^^^^^^^^^^^^^^^^
13 |         self._filter_access_rules_python("read")
14 |         self._check_recursion()
   |
help: Replace with `_filtered_access`
   |
11 |         self.check_access_rule("write")
   -         self._filter_access_rules("read")
12 +         self._filtered_access("read")
13 |         self._filter_access_rules_python("read")
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 [*] `_filter_access_rules_python` is deprecated since Odoo 18.0. Use `_filtered_access` instead; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:13:14
   |
11 |         self.check_access_rule("write")
12 |         self._filter_access_rules("read")
13 |         self._filter_access_rules_python("read")
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |         self._check_recursion()
15 |         self._check_m2m_recursion("child_ids")
   |
help: Replace with `_filtered_access`
   |
12 |         self._filter_access_rules("read")
   -         self._filter_access_rules_python("read")
13 +         self._filtered_access("read")
14 |         self._check_recursion()
   |
note: This is an unsafe fix and may change runtime behavior

ODW8502 `_check_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> deprecated_odoo_method_call.py:14:14
   |
12 |         self._filter_access_rules("read")
13 |         self._filter_access_rules_python("read")
14 |         self._check_recursion()
   |              ^^^^^^^^^^^^^^^^
15 |         self._check_m2m_recursion("child_ids")
   |

ODW8502 `_check_m2m_recursion` is deprecated since Odoo 18.0. Use `not _has_cycle(...)` instead — the result is inverted.
  --> deprecated_odoo_method_call.py:15:14
   |
13 |         self._filter_access_rules_python("read")
14 |         self._check_recursion()
15 |         self._check_m2m_recursion("child_ids")
   |              ^^^^^^^^^^^^^^^^^^^^
16 |
17 |     def deprecated_in_19(self):
   |

ODW8502 `check_access_rights` is deprecated since Odoo 18.0. Use `check_access` instead, or `has_access` where a boolean is needed; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:55:36
   |
53 |     def values(self):
54 |         # Reported: the `env[...]` subscript proves the receiver is a recordset.
55 |         request.env["res.partner"].check_access_rights("read")
   |                                    ^^^^^^^^^^^^^^^^^^^
56 |         # Reported: `sudo` hands back the same recordset, so the chain survives it.
57 |         request.env["res.partner"].sudo().with_context(lang="es").check_access_rights("read")
   |

ODW8502 `check_access_rights` is deprecated since Odoo 18.0. Use `check_access` instead, or `has_access` where a boolean is needed; an override belongs in `_check_access`.
  --> deprecated_odoo_method_call.py:57:67
   |
55 |         request.env["res.partner"].check_access_rights("read")
56 |         # Reported: `sudo` hands back the same recordset, so the chain survives it.
57 |         request.env["res.partner"].sudo().with_context(lang="es").check_access_rights("read")
   |                                                                   ^^^^^^^^^^^^^^^^^^^
58 |         # Not reported: `get_param` returns a string, and nothing here can know otherwise.
59 |         request.env["ir.config_parameter"].get_param("k").check_access_rights("read")
   |
